# sortshow

./: CMakeLists.txt  Makefile  README.md  main.cpp  renderer.cpp  renderer.h  sorts.cpp  sorts.h  tools.cpp  tools.h
lib/: libsfml-audio.so.3.0.1  libsfml-graphics.so.3.0.1  libsfml-network.so.3.0.1  libsfml-window.so.3.0.1
